<resources>
    <string name="app_name">Task App 2025</string>
    <string name="btn_add_task">Add New Task</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_due">Due Date</string>
    <string name="lbl_done">Done</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_delete">DELETE</string>
    <string name="delete_task">Delete Task</string>
    <string name="confirm_delete">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>