<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskListActivity">


    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_description" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/lblDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_due" />

    <EditText
        android:id="@+id/txtDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:text=""
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <CheckBox
        android:id="@+id/chkDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_done" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:visibility="gone"
        />
</LinearLayout>